Switched unit tests into separate project.
The classpath issues were getting a little much. It seems a common pattern
for what I'm experiencing is to just separate production code and unit tests
into separate projects.

--- a/main/res/layout/record.xml
+++ b/main/res/layout/record.xml
@@ -3,13 +3,15 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:id="@+id/record_layout" >
 
     <ImageButton
         android:id="@+id/RecordButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/big_ic_mic" />
+        android:src="@drawable/big_ic_mic"
+        android:contentDescription="@string/recordText" />
 
     <CheckBox
         android:id="@+id/selectiveListenBox"
