--- a/main/res/layout/main.xml
+++ b/main/res/layout/main.xml
@@ -15,9 +15,9 @@
             android:layout_weight="1"
             android:padding="0dp"
             >
-            <include android:id="@+id/record" layout="@layout/record" />
-            <include android:id="@+id/playback" layout="@layout/playback" />
-            <include android:id="@+id/projects" layout="@layout/projects" />
+            <include android:id="@+id/record_pane" layout="@layout/record" />
+            <include android:id="@+id/playback_pane" layout="@layout/playback" />
+            <include android:id="@+id/projects_pane" layout="@layout/projects" />
         </FrameLayout>
         <TabWidget
             android:id="@android:id/tabs"
