The ActionBarSherlock code now has a faux-ui.
I still need to go through and re-integrate this into everything else.

--- a/main/res/layout/main.xml
+++ b/main/res/layout/main.xml
@@ -1,30 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/tabhost"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:padding="0dp">
-        <FrameLayout
-            android:id="@android:id/tabcontent"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:padding="0dp"
-            >
-            <include android:id="@+id/record_pane" layout="@layout/record" />
-            <include android:id="@+id/playback_pane" layout="@layout/playback" />
-            <include android:id="@+id/projects_pane" layout="@layout/projects" />
-        </FrameLayout>
-        <TabWidget
-            android:id="@android:id/tabs"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:layout_gravity="bottom"
-             />
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
     </LinearLayout>
-</TabHost>
+</LinearLayout>
