--- a/main/res/layout/record.xml
+++ b/main/res/layout/record.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/big_ic_mic"
-        android:contentDescription="@string/recordText" />
+        android:contentDescription="@string/record_title" />
 
     <CheckBox
         android:id="@+id/selectiveListenBox"
